Fix scrollbars randomly appearing on window

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,3 @@
-html {
-  background-color: #111214;
-  user-select: none;
-}
-
 .App {
   text-align: center;
   min-height: 100vh;
