--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+html {
+  background-color: #111214;
+  user-select: none;
+  overflow: hidden;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
